# CrossplatformLab1

./: .appveyor.yml  CMakeLists.txt  README.md  info.h
gui/infodialog/: infodialog.cpp  infodialog.h  infodialog.ui
gui/mainwindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
model/testmodel/: testtablemodel.cpp  testtablemodel.h
storage/: database.h
util/widgetenabledguard/: widgetenabledguard.cpp  widgetenabledguard.h
